--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
 	<dependencies>
 		<!-- 第三方库 -->
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.5</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>net.sf.jopt-simple</groupId>
 			<artifactId>jopt-simple</artifactId>
 			<version>4.3</version>
