--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch-hadoop</artifactId>
+			<version>6.2.1</version>
+		</dependency>
 	</dependencies>
 	<!-- kettle中央仓库 -->
 	<repositories>
